# awslogs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
assets/: help.txt
src/: app.rs  aws_profiles.rs  defaults.rs  help.rs  input.rs  main.rs  presentation.rs  tui.rs  ui.rs
src/log_fetcher/: aws.rs  fake.rs  mod.rs
src/widgets/: column_picker.rs  mod.rs  toggle.rs
