[package]
name = "awslogs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1"
aws-sdk-cloudwatchlogs = "1.11"
aws-types = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.26"
tokio = { version = "1.37", features = ["full"] }
tui-input = { version = "0.8", default-features = false, features = ["crossterm"] }
tui-textarea = "0.4"
async-trait = "0.1"
rfd = "0.14"
arboard = "3"
